--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@ video { object-fit: cover; transform: scale(1.25); transition: transform 0.3s ea
 <audio id="audioPlayer" src="https://stream.zeno.fm/ini156d8bm4vv"></audio>
 <div class="mensaje">
 <span class="scroll-text" style="color:#FFFFFF;">UNA RADIO CON IA</span>
-<div class="mensaje-secundario">J Studio</div>
+<div class="mensaje-secundario">J Studio Radio</div>
 </div>
 <div class="boton-rojo" id="btnTV">
 <svg fill="white" height="70%" viewbox="0 0 64 64" width="70%" xmlns="http://www.w3.org/2000/svg">
